src/objects/HR_Staff_Data__c.object
<CustomObject>
    <description>The object is used to collect HR staff data.</description>
    <label>HR Staff Data</label>
    <nameField>
        <label>Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Staff Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>All_Staff_Average__c</fullName>
        <description>Average number of staff (employees and internal contractors) for the year.</description>
        <inlineHelpText>Average number of staff (employees and internal contractors) for the year.</inlineHelpText>
        <label>All Staff (Average)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Staff_Year_End__c</fullName>
        <description>Staff (employees and internal contractors) as of year end.</description>
        <inlineHelpText>Staff (employees and internal contractors) as of year end.</inlineHelpText>
        <label>All Staff (Year End)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_Average__c</fullName>
        <description>Average number of employees for the year.</description>
        <inlineHelpText>Average number of employees for the year.</inlineHelpText>
        <label>Employees (Average)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_Year_End__c</fullName>
        <description>Number of employees as of year end.</description>
        <inlineHelpText>Number of employees as of year end.</inlineHelpText>
        <label>Employees (Year End)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Contractors_Average__c</fullName>
        <description>Average number of internal contractors for the year.</description>
        <inlineHelpText>Average number of internal contractors for the year.</inlineHelpText>
        <label>Internal Contractors (Average)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Contractors_Year_End__c</fullName>
        <description>Number of internal contractors as of year end.</description>
        <inlineHelpText>Number of internal contractors as of year end.</inlineHelpText>
        <label>Internal Contractors (Year End)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>